# Vibe99

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENT.md  forge.config.cjs  main.js  package-lock.json  package.json  preload.js  tsconfig.config.json
.github/workflows/: release.yml  windows.yml
assets/icons/: icon.icns
changes/: +app-icon.bugfix.md  +breathing-activity-mask.feature.md  +command-palette.feature.md  +linux-deb-release.feature.md  +linux-pty-runtime.bugfix.md  +native-probe-race.bugfix.md  +nav-mode-hint-bar.feature.md  +node22-packaging.misc.md  +repo-structure.misc.md  +toolbar-button-alignment.bugfix.md  +windows-builder-portable.bugfix.md  profile-modal-redesign.md
electron/: config.ts  main.js  preload.js  pty.js
scripts/: check-supported-node.mjs  ensure-node-pty-runtime.mjs  prepare-native-modules.mjs  run-electron.mjs  run-package-command.mjs  verify-windows-portable.mjs
src/: command-palette.css  command-palette.js  hint-bar.js  index.html  pane-activity-watcher.js  pane-alert-breathing-mask.css  pane-alert-breathing-mask.js  renderer.js  shortcuts-registry.js  shortcuts-ui.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs  wsl.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  settings.rs  terminal.rs  wsl.rs
src/input/: actions.js  keymap.js
